[project]
name = "git-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.2",
    "pydantic>=2.13.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
git-workspace = "git_workspace.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
